--- a/ui/bower.json
+++ b/ui/bower.json
@@ -19,7 +19,8 @@
     "angular-toggle-switch": "~1.2.1",
     "metisMenu": "~1.1.3",
     "angular-chart.js": "~0.5.2",
-    "angular-growl-v2": "^0.7.9"
+    "angular-growl-v2": "^0.7.9",
+    "angular-spinner": "^0.8.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
