--- a/ui/bower.json
+++ b/ui/bower.json
@@ -2,19 +2,19 @@
   "name": "sb-admin",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.16",
+    "angular": "1.4.8",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
-    "angular-touch": "1.2.16",
-    "angular-route": "1.2.16",
+    "angular-resource": "1.4.8",
+    "angular-cookies": "1.4.8",
+    "angular-sanitize": "1.4.8",
+    "angular-animate": "1.4.8",
+    "angular-touch": "1.4.8",
+    "angular-route": "1.4.8",
     "font-awesome": "4.3.0",
-    "angular-bootstrap": "0.12.0",
-    "oclazyload": "~0.5.2",
-    "angular-loading-bar": "~0.7.0",
+    "angular-bootstrap": "1.1.2",
+    "oclazyload": "1.0.9",
+    "angular-loading-bar": "~0.8.0",
     "angular-ui-router": "~0.2.13",
     "angular-toggle-switch": "~1.2.1",
     "metisMenu": "~1.1.3",
@@ -23,8 +23,8 @@
     "angular-spinner": "^0.8.1"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
+    "angular-mocks": "1.4.8",
+    "angular-scenario": "1.4.8"
   },
   "resolutions": {
     "bootstrap": "~3.1.1"
