--- a/ui/bower.json
+++ b/ui/bower.json
@@ -21,7 +21,9 @@
     "angular-chart.js": "~0.5.2",
     "angular-growl-v2": "^0.7.9",
     "angular-spinner": "^0.8.1",
-    "angular-filter": "0.5.8"
+    "angular-filter": "0.5.8",
+    "angular-local-storage": "^0.2.7",
+    "angular-gravatar": "^0.4.2"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
