--- a/ui/bower.json
+++ b/ui/bower.json
@@ -20,10 +20,10 @@
     "metisMenu": "~1.1.3",
     "angular-chart.js": "~0.5.2",
     "angular-growl-v2": "^0.7.9",
-    "angular-spinner": "^0.8.1",
+    "angular-spinner": "0.8.1",
     "angular-filter": "0.5.8",
-    "angular-local-storage": "^0.2.7",
-    "angular-gravatar": "^0.4.2"
+    "angular-local-storage": "0.2.7",
+    "angular-gravatar": "0.4.2"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
