--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -143,5 +143,12 @@
             <version>3.6.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.5</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
