--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.logz.apollo</groupId>
+    <deploymentGroupId>io.logz.apollo</deploymentGroupId>
     <artifactId>apollo-backend</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -12,7 +12,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+                <deploymentGroupId>org.apache.maven.plugins</deploymentGroupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
@@ -22,7 +22,7 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+                <deploymentGroupId>org.apache.maven.plugins</deploymentGroupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
@@ -47,7 +47,7 @@
             </plugin>
             <!--
             <plugin>
-                <groupId>com.spotify</groupId>
+                <deploymentGroupId>com.spotify</deploymentGroupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.13</version>
                 <configuration>
@@ -67,84 +67,84 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>com.google.guava</groupId>
+            <deploymentGroupId>com.google.guava</deploymentGroupId>
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
+            <deploymentGroupId>ch.qos.logback</deploymentGroupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.7</version>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
+            <deploymentGroupId>ch.qos.logback</deploymentGroupId>
             <artifactId>logback-core</artifactId>
             <version>1.1.7</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
+            <deploymentGroupId>org.slf4j</deploymentGroupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.21</version>
         </dependency>
         <dependency>
-            <groupId>io.logz.logback</groupId>
+            <deploymentGroupId>io.logz.logback</deploymentGroupId>
             <artifactId>logzio-logback-appender</artifactId>
             <version>1.0.11</version>
         </dependency>
         <dependency>
-            <groupId>org.mybatis</groupId>
+            <deploymentGroupId>org.mybatis</deploymentGroupId>
             <artifactId>mybatis</artifactId>
             <version>3.4.1</version>
         </dependency>
         <dependency>
-            <groupId>org.rapidoid</groupId>
+            <deploymentGroupId>org.rapidoid</deploymentGroupId>
             <artifactId>rapidoid-quick</artifactId>
             <version>5.2.6</version>
         </dependency>
         <dependency>
-            <groupId>com.zaxxer</groupId>
+            <deploymentGroupId>com.zaxxer</deploymentGroupId>
             <artifactId>HikariCP</artifactId>
             <version>2.5.1</version>
         </dependency>
         <dependency>
-            <groupId>com.typesafe</groupId>
+            <deploymentGroupId>com.typesafe</deploymentGroupId>
             <artifactId>config</artifactId>
             <version>1.3.0</version>
         </dependency>
 
         <!-- Test dependencies -->
         <dependency>
-            <groupId>junit</groupId>
+            <deploymentGroupId>junit</deploymentGroupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testcontainers</groupId>
+            <deploymentGroupId>org.testcontainers</deploymentGroupId>
             <artifactId>mysql</artifactId>
             <version>1.1.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
+            <deploymentGroupId>com.squareup.okhttp3</deploymentGroupId>
             <artifactId>okhttp</artifactId>
             <version>3.4.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
+            <deploymentGroupId>com.google.code.gson</deploymentGroupId>
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.assertj</groupId>
+            <deploymentGroupId>org.assertj</deploymentGroupId>
             <artifactId>assertj-core</artifactId>
             <version>3.6.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
+            <deploymentGroupId>com.fasterxml.jackson.core</deploymentGroupId>
             <artifactId>jackson-core</artifactId>
             <version>2.8.5</version>
             <scope>test</scope>
