--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -163,5 +163,11 @@
             <version>3.6.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-mock</artifactId>
+            <version>1.4.14</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
