--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -10,6 +10,7 @@
     <packaging>jar</packaging>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
