--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -10,7 +10,7 @@ http {
     }
 
     server {
-        listen                8080;
+        listen                80;
 
         # allow all origins and all methods
         #add_header 'Access-Control-Allow-Origin' "*";
@@ -29,7 +29,7 @@ http {
 		}
 
 		location / {
-			root /usr/share/nginx/html
+			root /usr/share/nginx/html;
 		}
 	}
 }
