--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -9,27 +9,24 @@ http {
         server localhost:8081;
     }
 
+	include /etc/nginx/mime.types;
+
     server {
-        listen                80;
-
-        # allow all origins and all methods
-        #add_header 'Access-Control-Allow-Origin' "*";
-        #add_header 'Access-Control-Allow-Credentials' 'true';
-        #add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-
-        # Custom headers and headers various browsers *should* be OK with but aren't
-        #add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Mx-ReqToken,X-Requested-With';
-
+        listen 80;
 		access_log /var/log/nginx/access.log;
 		error_log /var/log/nginx/error.log;
 
 		location /api/ {
-			proxy_pass_header 	*;
-			proxy_pass		http://backend/;
+			proxy_pass_header *;
+			proxy_pass http://backend/;
 		}
 
 		location / {
 			root /usr/share/nginx/html;
+			index index.html;
+			try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
 		}
 	}
+
+	include /etc/nginx/conf.d/*.conf;
 }
