--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -5,10 +5,6 @@ events {
 }
 
 http {
-    upstream backend {
-        server localhost:8081;
-    }
-
 	include /etc/nginx/mime.types;
 
     server {
@@ -18,7 +14,7 @@ http {
 
 		location /api/ {
 			proxy_pass_header *;
-			proxy_pass http://backend/;
+			proxy_pass http://127.0.0.1:8081/;
 		}
 
 		location / {
@@ -27,6 +23,4 @@ http {
 			try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
 		}
 	}
-
-	include /etc/nginx/conf.d/*.conf;
 }
