--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -132,6 +132,16 @@
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kohsuke</groupId>
+            <artifactId>github-api</artifactId>
+            <version>1.84</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
@@ -144,12 +154,6 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>mysql</artifactId>
             <version>1.1.7</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.4.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
