Forcing SSL on apollo

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,6 +18,11 @@ http {
 		}
 
 		location / {
+
+			if ($http_x_forwarded_proto != 'https') {
+				rewrite ^ https://$host$request_uri? permanent;
+			}
+
 			root /usr/share/nginx/html;
 			index index.html;
 			try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
