--- a/ui/bower.json
+++ b/ui/bower.json
@@ -31,7 +31,8 @@
     "angular-scenario": "1.4.8"
   },
   "resolutions": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular": "1.4.8"
   },
   "appPath": "app"
 }
