--- a/ui/bower.json
+++ b/ui/bower.json
@@ -24,7 +24,8 @@
     "angular-filter": "0.5.8",
     "angular-local-storage": "0.2.7",
     "angular-gravatar": "0.4.2",
-    "angular-datatables": "0.6.1"
+    "angular-datatables": "0.6.1",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
