--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -85,6 +85,11 @@
             <version>2.5.1</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.42</version>
+        </dependency>
+        <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>1.3.0</version>
