--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>org.rapidoid</groupId>
             <artifactId>rapidoid-quick</artifactId>
-            <version>5.2.6</version>
+            <version>5.3.4</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -123,6 +123,16 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>4.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>javax-websocket-server-impl</artifactId>
+            <version>9.4.5.v20170502</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
         </dependency>
 
         <!-- Test dependencies -->
