--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -17,6 +17,11 @@ http {
 			proxy_pass http://127.0.0.1:8081/;
 		}
 
+		location /ws/ {
+			proxy_pass_header *;
+			proxy_pass http://127.0.0.1:8082/;
+		}
+
 		location / {
 
 			if ($http_x_forwarded_proto != 'https') {
