--- a/ui/bower.json
+++ b/ui/bower.json
@@ -26,7 +26,8 @@
     "angular-gravatar": "0.4.2",
     "angular-datatables": "0.6.1",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
-    "angular-ui-codemirror": "^0.3.0"
+    "angular-ui-codemirror": "^0.3.0",
+    "xterm.js": "^2.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
