--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -19,6 +19,9 @@ http {
 
 		location /ws/ {
 			proxy_pass_header *;
+			proxy_http_version 1.1;
+    		proxy_set_header Upgrade $http_upgrade;
+    		proxy_set_header Connection "upgrade";
 			proxy_pass http://127.0.0.1:8082/;
 		}
 
