--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -32,7 +32,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>io.logz.apollo.ApolloMain</mainClass>
+                            <mainClass>io.logz.apollo.ApolloApplication</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -142,11 +142,6 @@
         <dependency>
             <groupId>com.netflix.governator</groupId>
             <artifactId>governator</artifactId>
-            <version>1.17.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.netflix.governator</groupId>
-            <artifactId>governator-core</artifactId>
             <version>1.17.2</version>
         </dependency>
         <dependency>
