--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -154,6 +154,11 @@
             <artifactId>reflections</artifactId>
             <version>0.9.11</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>0.8.12</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
@@ -184,6 +189,32 @@
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-mock</artifactId>
             <version>1.4.14</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.8.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>2.7.1</version>
+            <scope>test</scope>
+        </dependency>
+        <!--There's a conflict between jetty-http versions used by jetty.websocket and WireMock-->
+        <!--Should be revisited from time to time as we upgrade WireMock-->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+            <version>9.2.20.v20161216</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test</artifactId>
+            <version>2.7.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
