--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -19,7 +19,7 @@ http {
 
 		location /hawtio/ {
 			proxy_pass_header *;
-			proxy_pass http://127.0.0.1:8083/;
+			proxy_pass http://127.0.0.1:8083;
 		}
 
 		location /ws/ {
