--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>apollo-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
@@ -90,11 +95,6 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>22.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.4.1</version>
@@ -113,11 +113,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.34</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe</groupId>
-            <artifactId>config</artifactId>
-            <version>1.3.0</version>
         </dependency>
         <dependency>
             <groupId>io.fabric8</groupId>
@@ -164,6 +159,11 @@
             <artifactId>compiler</artifactId>
             <version>0.8.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.conf4j</groupId>
+            <artifactId>conf4j-consul</artifactId>
+            <version>2017.10.1</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
@@ -208,5 +208,12 @@
             <version>3.10.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
