load external logback xml (#74)
* adding debug

* logback debug

* delete logback conf

* logback

* applying JAVA_OPTS

* removing logback debug flag

* appy k8s health check frequency secs

* apply k8s health frequency secs

* +

--- a/docker/apollo.conf
+++ b/docker/apollo.conf
@@ -1,7 +1,7 @@
 apollo {
   db {
     port = 3306
-    host = "db.local"
+    host = "localhost"
     user = "root"
     password = "rootpassword"
     schema = "apollo"
@@ -22,6 +22,7 @@ apollo {
     githubLogin = "logzio-apollo"
     githubOauthToken = """"
   }
+  
 
   websocket {
     port = 8082
