Removing sensitive data (#75)
* Removing sensitive data

* typo

--- a/docker/apollo.conf
+++ b/docker/apollo.conf
@@ -19,8 +19,8 @@ apollo {
   }
 
   scm {
-    githubLogin = "logzio-apollo"
-    githubOauthToken = """"
+    githubLogin = ""
+    githubOauthToken = ""
   }
   
 
