--- a/apollo-backend/pom.xml
+++ b/apollo-backend/pom.xml
@@ -89,6 +89,7 @@
         <dependency>
             <groupId>org.kohsuke</groupId>
             <artifactId>github-api</artifactId>
+            <version>1.92</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
