--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - ./mvnw test && ./ui/build.sh
 
 after_success:
-    Using the variable $TRAVIS_BRANCH and $TRAVIS_PULL_REQUEST in conjunction to determine the current branch ..
+    # Using the variable $TRAVIS_BRANCH and $TRAVIS_PULL_REQUEST in conjunction to determine the current branch ..
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 
   - if [ "$BRANCH" == "master" ]; then
@@ -30,3 +30,5 @@ after_success:
     docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
     docker push logzio/apollo:$TRAVIS_COMMIT;
     fi
+
+
