--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,6 @@ script:
 after_success:
     # Using the variable $TRAVIS_BRANCH and $TRAVIS_PULL_REQUEST in conjunction to determine the current branch ..
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
-
-  - if [ "$BRANCH" == "master" ]; then
-    docker build -t logzio/apollo:$TRAVIS_COMMIT .;
-    docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-    docker push logzio/apollo:$TRAVIS_COMMIT;
-    fi
+  - if [ "$BRANCH" == "master" ]; then docker build -t logzio/apollo:$TRAVIS_COMMIT .; docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"; docker push logzio/apollo:$TRAVIS_COMMIT; fi
 
 
