--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 after_success:
   - if [ "$BRANCH" == "master" ]; then
     docker build -t logzio/apollo:$TRAVIS_COMMIT .;
-    docker tag logzio/apollo:$TRAVIS_COMMIT logzio/apollo:latest
+    docker tag logzio/apollo:$TRAVIS_COMMIT logzio/apollo:latest;
     docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
     docker push logzio/apollo:$TRAVIS_COMMIT;
     docker push logzio/apollo:latest;
