--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "30001:80"
     restart: always
     environment:
-      APOLLO_CONFIG_FILENAME: /root/apollo.conf
+      APOLLO_CONFIG_FILEPATH: /root/apollo.conf
     volumes:
       - ./apollo.conf:/root/apollo.conf
       - ./nginx.conf:/etc/nginx/nginx.conf
